// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DownloadLinks render component with one column 1`] = `
<div
  className="mfui-beta-download-links mfui-beta-download-links_count_1"
>
  <Grid
    guttersLeft="medium"
    multiRow={true}
  >
    <GridColumn
      all="7"
      className="mfui-beta-download-links__column"
      flex={false}
      grow={false}
      key=".0"
      mobile="12"
      orderAll="0"
      orderDesktop="0"
      orderMobile="0"
      orderTablet="0"
      orderWide="0"
    >
      <DownloadLink
        extension="PDF"
        fileSize="500 MB"
        href="href"
        text="text"
      />
    </GridColumn>
  </Grid>
</div>
`;

exports[`DownloadLinks render component with three columns 1`] = `
<div
  className="mfui-beta-download-links mfui-beta-download-links_count_5"
>
  <Grid
    guttersLeft="medium"
    multiRow={true}
  >
    <GridColumn
      all="12"
      className="mfui-beta-download-links__column"
      desktop="4"
      flex={false}
      grow={false}
      key=".0"
      mobile="12"
      orderAll="0"
      orderDesktop="0"
      orderMobile="0"
      orderTablet="0"
      orderWide="0"
      tablet="6"
      wide="4"
    >
      <DownloadLink
        extension="PDF"
        fileSize="500 MB"
        href="href"
        text="text"
      />
    </GridColumn>
    <GridColumn
      all="12"
      className="mfui-beta-download-links__column"
      desktop="4"
      flex={false}
      grow={false}
      key=".1"
      mobile="12"
      orderAll="0"
      orderDesktop="0"
      orderMobile="0"
      orderTablet="0"
      orderWide="0"
      tablet="6"
      wide="4"
    >
      <DownloadLink
        extension="PDF"
        fileSize="500 MB"
        href="href"
        text="text"
      />
    </GridColumn>
    <GridColumn
      all="12"
      className="mfui-beta-download-links__column"
      desktop="4"
      flex={false}
      grow={false}
      key=".2"
      mobile="12"
      orderAll="0"
      orderDesktop="0"
      orderMobile="0"
      orderTablet="0"
      orderWide="0"
      tablet="6"
      wide="4"
    >
      <DownloadLink
        extension="PDF"
        fileSize="500 MB"
        href="href"
        text="text"
      />
    </GridColumn>
    <GridColumn
      all="12"
      className="mfui-beta-download-links__column"
      desktop="4"
      flex={false}
      grow={false}
      key=".3"
      mobile="12"
      orderAll="0"
      orderDesktop="0"
      orderMobile="0"
      orderTablet="0"
      orderWide="0"
      tablet="6"
      wide="4"
    >
      <DownloadLink
        extension="PDF"
        fileSize="500 MB"
        href="href"
        text="text"
      />
    </GridColumn>
    <GridColumn
      all="12"
      className="mfui-beta-download-links__column"
      desktop="4"
      flex={false}
      grow={false}
      key=".4"
      mobile="12"
      orderAll="0"
      orderDesktop="0"
      orderMobile="0"
      orderTablet="0"
      orderWide="0"
      tablet="6"
      wide="4"
    >
      <DownloadLink
        extension="PDF"
        fileSize="500 MB"
        href="href"
        text="text"
      />
    </GridColumn>
  </Grid>
</div>
`;

exports[`DownloadLinks render component with two columns 1`] = `
<div
  className="mfui-beta-download-links mfui-beta-download-links_count_3"
>
  <Grid
    guttersLeft="medium"
    multiRow={true}
  >
    <GridColumn
      all="6"
      className="mfui-beta-download-links__column"
      flex={false}
      grow={false}
      key=".0"
      mobile="12"
      orderAll="0"
      orderDesktop="0"
      orderMobile="0"
      orderTablet="0"
      orderWide="0"
    >
      <DownloadLink
        extension="PDF"
        fileSize="500 MB"
        href="href"
        text="text"
      />
    </GridColumn>
    <GridColumn
      all="6"
      className="mfui-beta-download-links__column"
      flex={false}
      grow={false}
      key=".1"
      mobile="12"
      orderAll="0"
      orderDesktop="0"
      orderMobile="0"
      orderTablet="0"
      orderWide="0"
    >
      <DownloadLink
        extension="PDF"
        fileSize="500 MB"
        href="href"
        text="text"
      />
    </GridColumn>
    <GridColumn
      all="6"
      className="mfui-beta-download-links__column"
      flex={false}
      grow={false}
      key=".2"
      mobile="12"
      orderAll="0"
      orderDesktop="0"
      orderMobile="0"
      orderTablet="0"
      orderWide="0"
    >
      <DownloadLink
        extension="PDF"
        fileSize="500 MB"
        href="href"
        text="text"
      />
    </GridColumn>
  </Grid>
</div>
`;
